fixed layout, spacing issues as per bootstrap major version update

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans+Narrow:400,700|PT+Sans:400,400i,700,700i|PT+Serif+Caption:400,400i|PT+Serif:400,400i,700,700i');
 @import url('https://fonts.googleapis.com/css?family=Crimson+Text|Gentium+Basic|Lato|Libre+Baskerville|Raleway&display=swap');
 
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins/breakpoints";
 
 $ec-base-font-family: 'PT Serif', serif;
 $ec-headings-font-family: 'PT Sans', sans-serif;
@@ -173,7 +175,7 @@ $service-box-border-color: #F9F900;
     line-height: 1.6;
   }
   @include media-breakpoint-down(sm) {
-    font-size: 1.4rem;
+    font-size: 1.1rem;
     line-height: 1.6;
   }
   @media (min-width: 1367px) {
